[package]
name = "libqhyccd-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0" # for std::ffi::c_char
links = "qhyccd"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.12"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

#to make Zminimal happy
tracing-attributes = "0.1.27"

[features]
vendored = []
